Fixed latest articles line spacing

--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ body {
   font-size: 2rem;
 }
 
-.latest-articles>article:nth-child(odd) {
+.latest-articles > article:nth-child(odd) {
   background-color: rgb(153, 153, 153);
 }
 
@@ -134,6 +134,10 @@ body {
   border-radius: 6px;
 }
 
+.author {
+  padding-left: 1rem;
+}
+
 .author-wrapper {
   display: flex;
   flex-direction: row;
@@ -150,7 +154,6 @@ body {
 .article-info {
   font-size: 2.5rem;
 }
-
 
 /* latest post section */
 
@@ -262,4 +265,60 @@ body {
 
 .members-text {
   margin-bottom: 10px;
+}
+
+/* Ethical Design Handbook */
+
+.pre-launch {
+  height: 100vh;
+  background-color: rgb(180, 180, 180);
+}
+
+/* Community links */
+
+.community-links {
+  height: 100vh;
+}
+
+.person-of-the-week {
+  padding-top: 2rem;
+  width: 95%;
+  height: 38%;
+  margin: 0 auto;
+}
+
+.image {
+  background-color: white;
+  border: 4px solid gray;
+  width: 200px;
+  height: 200px;
+  float: left;
+}
+
+.community-posts {
+  clear: both;
+  width: 95%;
+  height: 60%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.posts {
+  display: grid;
+  grid-template-columns: 10% 1fr;
+}
+
+.autor-small {
+  background-color: white;
+  border: 4px solid gray;
+  width: 50px;
+  height: 50px;
+}
+
+/* Book Advertising */
+
+.book-advertising {
+  height: 40vh;
+  background-color: hotpink;
 }
